Practica/kubernetes/adminer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.k8s.io: adminer
  name: adminer
spec:
  replicas: 1
  selector:
    matchLabels:
      app.k8s.io: adminer
  template:
    metadata:
      labels:
        app.k8s.io: adminer
    spec:
      containers:
        - image: adminer
          name: adminer-srv
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
