Practica/kubernetes/adminer.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: adminer
  name: adminer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
        - image: adminer
          name: adminer-srv
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always

# Service
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: adminer
  name: adminer-srv
spec:
  ports:
    - protocol: TCP
      port: 50
      targetPort: 8080
  selector:
    app: adminer
