Practica/kubernetes/database.yaml
# Deployment
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: db
  name: db
spec:
  serviceName: "db"
  replicas: 1
  selector:
    matchLabels:
      app: db
  # Cuando se actualialize del Deployment, los pods se eliminarán antes de crear nuevos    
  #strategy:
    #type: Recreate
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: bryyyan/practica_contendores:appdata-k8s-v2
        ports:
        - containerPort: 5432
          protocol: TCP
        # Variables de entorno para configura la base de datos  
        volumeMounts:
        - name: data 
          mountPath: /var/lib/postgresql/data
      restartPolicy: Always
      # Necesario para extraer la imagen
      imagePullSecrets:
        - name: docker-secret
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 100Mi

# Service
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db
  name: db
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    app: db
