Practica/kubernetes/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.k8s.io: web
  name: web-srv
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80 # Puerto expuesto al que apunta el Ingress
      targetPort: 5000 # Puerto interno del contenedor
  selector:
    app.k8s.io: web
