Practica/kubernetes/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: web
  name: web-igrss
  namespace: default
spec:
  rules:
  - host: 192-168-49-2.nip.io # Se usa la IP de minikube tunel
    http:
      paths:
      - path: /notes
        pathType: Prefix
        backend:
          service:
            name: web-srv
            port:
              number: 80
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: adminer-srv
            port:
              number: 50
